--- a/prediksicuaca.html
+++ b/prediksicuaca.html
@@ -16,7 +16,7 @@
           <ul>
             <li><a class="nav-link scrollto" href="index.html">Home</a></li>
             <li><a class="nav-link scrollto active" href="prediksicuaca.html">Cuaca</a></li>
-            <li><a class="nav-link scrollto" href="polusi.html">Polusi</a></li>
+            <li><a class="nav-link scrollto" href="tingkatanpolusi.html">Polusi</a></li>
             <li><a class="nav-link scrollto" href="#">Prediksi</a></li>
             <li><a class="nav-link scrollto" href="penyakit.html">Penyakit</a></li>
             <li class="dropdown"><a href="#"><span>Data</span> <i class="bi bi-chevron-down"></i></a>
