--- a/prediksicuaca.html
+++ b/prediksicuaca.html
@@ -18,7 +18,7 @@
             <li><a class="nav-link scrollto active" href="prediksicuaca.html">Cuaca</a></li>
             <li><a class="nav-link scrollto" href="tingkatanpolusi.html">Polusi</a></li>
             <li><a class="nav-link scrollto" href="#">Prediksi</a></li>
-            <li><a class="nav-link scrollto" href="penyakit.html">Penyakit</a></li>
+            <li><a class="nav-link scrollto" href="#">Penyakit</a></li>
             <li class="dropdown"><a href="#"><span>Data</span> <i class="bi bi-chevron-down"></i></a>
               <ul>
                 <li><a href="#">Drop Down 1</a></li>
