--- a/tingkatanpolusi.html
+++ b/tingkatanpolusi.html
@@ -28,10 +28,10 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto" href="index.html">Home</a></li>
-          <li><a class="nav-link scrollto" href="#about">Cuaca</a></li>
+          <li><a class="nav-link scrollto" href="prediksicuaca.html">Cuaca</a></li>
           <li><a class="nav-link scrollto active" href="tingkatanpolusi.html">Polusi</a></li>
-          <li><a class="nav-link scrollto " href="#portfolio">Prediksi</a></li>
-          <li><a class="nav-link scrollto" href="#team">Penyakit</a></li>
+          <li><a class="nav-link scrollto " href="#">Prediksi</a></li>
+          <li><a class="nav-link scrollto" href="#">Penyakit</a></li>
           <li class="dropdown"><a href="#"><span>Data</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
