--- a/tingkatanpolusi.html
+++ b/tingkatanpolusi.html
@@ -57,43 +57,7 @@
   </header><!-- End Header -->
 
   <!-- Your Tableau Embed Code Goes Here -->
-  <div class='tableauPlaceholder' id='viz1695475845311' style='position: relative'>
-      <noscript>
-          <a href='#'><img alt='Monitoring (3) ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;IS&#47;ISPU_16945755247450&#47;Monitoring3&#47;1_rss.png' style='border: none' /></a>
-      </noscript>
-      <object class='tableauViz'  style='display:none;'>
-          <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
-          <param name='embed_code_version' value='3' />
-          <param name='site_root' value='' />
-          <param name='name' value='ISPU_16945755247450&#47;Monitoring3' />
-          <param name='tabs' value='no' />
-          <param name='toolbar' value='yes' />
-          <param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;IS&#47;ISPU_16945755247450&#47;Monitoring3&#47;1.png' />
-          <param name='animate_transition' value='yes' />
-          <param name='display_static_image' value='yes' />
-          <param name='display_spinner' value='yes' />
-          <param name='display_overlay' value='yes' />
-          <param name='display_count' value='yes' />
-          <param name='language' value='en-US' />
-      </object>
-  </div>
-  <script type='text/javascript'>
-      var divElement = document.getElementById('viz1695475845311');
-      var vizElement = divElement.getElementsByTagName('object')[0];
-      if (divElement.offsetWidth > 800) {
-          vizElement.style.width='1442px';
-          vizElement.style.height='4027px';
-      } else if (divElement.offsetWidth > 500) {
-          vizElement.style.width='1442px';
-          vizElement.style.height='4027px';
-      } else {
-          vizElement.style.width='100%';
-          vizElement.style.height='7677px';
-      }
-      var scriptElement = document.createElement('script');
-      scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
-      vizElement.parentNode.insertBefore(scriptElement, vizElement);
-  </script>
+  <div class='tableauPlaceholder' id='viz1699332542587' style='position: relative'><noscript><a href='#'><img alt='Dashboard  ISPU ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;MO&#47;MONITORINGISPU&#47;DashboardISPU&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='MONITORINGISPU&#47;DashboardISPU' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;MO&#47;MONITORINGISPU&#47;DashboardISPU&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1699332542587');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1440px';vizElement.style.height='3727px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1440px';vizElement.style.height='3727px';} else { vizElement.style.width='100%';vizElement.style.height='3827px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
 
   <!-- Add the rest of your content below this -->
 </body>
